--- a/artifacts/pom.xml
+++ b/artifacts/pom.xml
@@ -28,6 +28,11 @@ and is available at http://www.eclipse.org/legal/epl-v10.html
         <version>${project.version}</version>
       </dependency>
       <dependency>
+        <groupId>org.opendaylight.jacuzzi</groupId>
+        <artifactId>jacuzzi-consumer</artifactId>
+        <version>0.1.0-SNAPSHOT</version>
+      </dependency>
+      <dependency>
         <groupId>${project.groupId}</groupId>
         <artifactId>jacuzzi-features</artifactId>
         <version>${project.version}</version>
