--- a/features/pom.xml
+++ b/features/pom.xml
@@ -79,5 +79,10 @@ and is available at http://www.eclipse.org/legal/epl-v10.html INTERNAL
       <artifactId>jacuzzi-api</artifactId>
       <version>${project.version}</version>
     </dependency>
+    <dependency>
+    <groupId>org.opendaylight.jacuzzi</groupId>
+      <artifactId>jacuzzi-consumer</artifactId>
+      <version>0.1.0-SNAPSHOT</version>
+    </dependency>
   </dependencies>
 </project>
